--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lg-ui-vue",
+  "name": "@lg/lg-ui",
   "version": "1.0.0",
   "description": "lg的组件",
   "main": "./dist/index.cjs.js",
